--- a/settings/example.config.scss
+++ b/settings/example.config.scss
@@ -77,6 +77,7 @@ $offsets: true !default;
 $widths-delimiter: \/ !default;
 $widths-breakpoint-separator: \@ !default;
 $flex-source-ordering-count: 3;
+$single-column-width: 100 / $fractions;
 
 // Name your breakpoints in a way that creates a ubiquitous language
 // across team members. It will improve communication between
